--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <module>web</module>
     <module>base</module>
     <module>wo</module>
+    <module>sync</module>
   </modules>
 
   <organization>
