--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.beangle</groupId>
     <artifactId>beangle-scala</artifactId>
-    <version>28.0</version>
+    <version>28.2</version>
   </parent>
   <groupId>com.yushanginfo.erp.mes</groupId>
   <artifactId>erp-mes-parent</artifactId>
@@ -30,23 +30,23 @@
     <organization.slogan>Agile Enterprice Resource Planning Solution.</organization.slogan>
     <bundle.symbolicName>com.yushanginfo.parent</bundle.symbolicName>
     <bundle.namespace>com.yushanginfo</bundle.namespace>
-    <beangle.commons.version>5.2.0</beangle.commons.version>
-    <beangle.cdi.version>0.2.3</beangle.cdi.version>
-    <beangle.data.version>5.3.16</beangle.data.version>
-    <beangle.template.version>0.0.28</beangle.template.version>
-    <beangle.serializer.version>0.0.16</beangle.serializer.version>
-    <beangle.cache.version>0.0.20</beangle.cache.version>
-    <beangle.security.version>4.2.23</beangle.security.version>
-    <beangle.webmvc.version>0.3.44</beangle.webmvc.version>
-    <beangle.webui.version>0.3.47</beangle.webui.version>
-    <beangle.ids.version>0.2.13</beangle.ids.version>
-    <beangle.ems.version>4.1.9</beangle.ems.version>
+    <beangle.commons.version>5.2.2</beangle.commons.version>
+    <beangle.cdi.version>0.2.6</beangle.cdi.version>
+    <beangle.data.version>5.3.21</beangle.data.version>
+    <beangle.template.version>0.0.30</beangle.template.version>
+    <beangle.serializer.version>0.0.18</beangle.serializer.version>
+    <beangle.cache.version>0.0.22</beangle.cache.version>
+    <beangle.security.version>4.2.26</beangle.security.version>
+    <beangle.webmvc.version>0.4.0</beangle.webmvc.version>
+    <beangle.webui.version>0.3.49</beangle.webui.version>
+    <beangle.ids.version>0.2.18</beangle.ids.version>
+    <beangle.ems.version>4.1.16</beangle.ems.version>
     <beangle.maven.version>0.3.30</beangle.maven.version>
     <beangle.notify.version>0.0.1-SNAPSHOT</beangle.notify.version>
-    <HikariCP.version>3.4.5</HikariCP.version>
-    <hibernate.version>5.4.17.Final</hibernate.version>
-    <ehcache.version>3.8.1</ehcache.version>
-    <spring.version>5.2.3.RELEASE</spring.version>
+    <HikariCP.version>4.0.3</HikariCP.version>
+    <hibernate.version>5.4.31.Final</hibernate.version>
+    <ehcache.version>3.9.3</ehcache.version>
+    <spring.version>5.3.6</spring.version>
     <gson.version>2.8.6</gson.version>
   </properties>
 
